chore: update Connect application with Docker and documentation